WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240365
Infinite recursion caused by call to accessibilityIsIgnored in the midst of AccessibilityObject::ignoredFromModalPresence
https://bugs.webkit.org/show_bug.cgi?id=240365
Summary
Infinite recursion caused by call to accessibilityIsIgnored in the midst of A...
Tyler Wilcock
Reported
2022-05-12 17:52:01 PDT
This causes crashes.
Attachments
Patch
(8.34 KB, patch)
2022-05-12 18:03 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(9.93 KB, patch)
2022-05-12 21:20 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-12 17:52:18 PDT
<
rdar://problem/93213436
>
Tyler Wilcock
Comment 2
2022-05-12 18:03:22 PDT
Created
attachment 459266
[details]
Patch
Tyler Wilcock
Comment 3
2022-05-12 21:20:56 PDT
Created
attachment 459274
[details]
Patch
EWS
Comment 4
2022-05-13 21:38:33 PDT
Committed
r294186
(
250552@main
): <
https://commits.webkit.org/250552@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459274
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug